--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 # standard jekyll configuration
 
-# permalink: :title
+#permalink: :date
+url: http://tinyfactory.github.com/
+baseurl: Tiny-Factory-Docs/
 exclude: ['Rakefile', 'README.md', 'config.rb']
 
 # configuration required for some pages
