--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # standard jekyll configuration
 
 # Development
-url: http://localhost:4000/
+# url: http://localhost:4000/
 
 # Production
-# baseurl: /Tiny-Factory-Docs
-# url: http://tinyfactory.github.com/Tiny-Factory-Docs/
+baseurl: /Tiny-Factory-Docs
+url: http://tinyfactory.github.com/Tiny-Factory-Docs/
 
 permalink: :date
 exclude: ['Rakefile', 'README.md', 'config.rb']
