Hopefully fixing the paths

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # baseurl: /
 
 # Production
-baseurl: Tiny-Factory-Docs/
-url: http://tinyfactory.github.com/Tiny-Factory-Docs/
+url: http://tinyfactory.github.com/Tiny-Factory-Docs
+baseurl: /Tiny-Factory-Docs
 
 
 permalink: :date
