More config changes

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,9 @@
 # baseurl: /
 
 # Production
-url: http://tinyfactory.github.com/Tiny-Factory-Docs
-baseurl: /Tiny-Factory-Docs
+url: http://tinyfactory.github.com/Tiny-Factory-Docs/
+# baseurl: /Tiny-Factory-Docs
+markdown: redcarpet
 
 
 permalink: :date
