Remove redundant slash

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # baseurl: /
 
 # Production
-url: http://tinyfactory.github.com/Tiny-Factory-Docs/
+url: http://tinyfactory.github.com/Tiny-Factory-Docs
 # baseurl: /Tiny-Factory-Docs
 
 
