Trying to see if redcarpet will take

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,16 @@
 # Development
 # url: http://localhost:4000
-# baseurl: /
 
 # Production
 url: http://tinyfactory.github.com/Tiny-Factory-Docs
-# baseurl: /Tiny-Factory-Docs
 
 
 permalink: :date
 exclude: ['Rakefile', 'README.md', 'config.rb']
-pygments: false
+pygments: true
+markdown: redcarpet2
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data"]
 
 # configuration required for some pages
 
