Getting those analytics running

--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ title: Tiny Factory Docs
 author: Tiny Factory
 email: hello@tinyfactory.co
 
-# google_analytics:
-#   account: UA-XXXXX-X
+google_analytics:
+  account: UA-20145334-1
 
 prose:
   rooturl: "_posts"
