Change Alex's email to the correct one, add article authors to the feed and fix broken feed links.

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ authors:
   alex:
     display_name: Alex Rolek
     gravatar: 32e270a19ef710b143c87036aaacb6a3
-    email: alex.rolek@gmail.com
+    email: a.rolek@gmail.com
     web: http://www.tinyfactory.co
     twitter: AlexRolek
     github: ARolek
