Me and my stupid aliases.

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ prose:
 
 authors:
   aaron:
-    display_name: Areus Wade
+    display_name: Aaron Wade
     gravatar: 3a88629dd9417c822b68af4af685b782
     email: hi@areuswade.com
     web: http://www.areuswade.com
