--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude: ['Rakefile', 'README.md', 'config.rb', "_plugins"]
 pygments: true
 markdown: redcarpet2
 redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "with_toc_data"]
 
 # configuration required for some pages
 
