--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Development
 # url: http://localhost:4000
+# markdown: redcarpet2
 
 # Production
 url: http://docs.tinyfactory.co
@@ -8,9 +9,6 @@ url: http://docs.tinyfactory.co
 permalink: :date
 exclude: ['Rakefile', 'README.md', 'config.rb', "_plugins"]
 pygments: true
-markdown: redcarpet2
-redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "with_toc_data"]
 
 # configuration required for some pages
 
