--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: http://docs.tinyfactory.co
 permalink: :date
 exclude: ['Rakefile', 'README.md', 'config.rb', "_plugins"]
 pygments: true
-# markdown: redcarpet2
+markdown: redcarpet
 # redcarpet:
 #   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "with_toc_data"]
 
